refactor : Move/Sort service, ScheduleUtils